[package]
name = "logan"
version = "0.1.0"
authors = ["Kalmár Róbert <rfrostkalmar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3"
clap = "2.33"
ansi_term = "0.12"
itertools = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
